<resources>
    <string name="app_id">1874726539438323</string>
    <string name="search_label">Cari Produk</string>
    <string name="add_group_title">Add Group</string>
    <string name="pick_group_title">Group List</string>
    <string name="add_transaksi_title">New Transaction</string>
    <string name="nol">00</string>
    <string name="message_to">081219082008</string>
    <string name="message_send">Message to send.</string>
    <string name="message_datetime">00:00</string>
    <string name="datepicker">Datepicker</string>
    <string name="action_add">New</string>
    <string name="action_transaksi">Transaction</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_setting">Setting</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_search">Search</string>
    <string name="action_cart">Cart</string>
    <string name="action_save_image">Save Image</string>
    <string name="groups_jumlah_nomer">0 Number</string>
    <string name="groups_nama_group">Name</string>
    <string name="groups_pejelasan_group">Information</string>
    <string name="nama_operator">Provider Name</string>
    <string name="generate_pengaturan_prolog">Change the message format and set as desired before being processed.</string>
    <string name="generate_pengaturan_format">Message Format</string>
    <string name="generate_pengaturan_format_prolog">using parameter [QRCODE] for QR Code value and [SET] for set value.</string>
    <string name="generate_pengaturan_set">Set Message</string>
    <string name="generate_pengaturan_set_prolog">Use with "-" mark to separate sets.</string>
    <string name="generate_pengaturan_start_set">It starts from set to</string>
    <string name="generate_pengaturan_generate">Generate</string>
    <string name="action_generate_cancel">Cancle</string>
    <string name="action_generate_submit">Submit</string>
    <string name="generate_scan">Scan Barcode</string>
    <string name="pengaturan_prolog">Parameters required for the messaging process.</string>
    <string name="pengaturan_katakunci_1">Response match 1</string>
    <string name="pengaturan_katakunci_2">Response match 2</string>
    <string name="pengaturan_katakunci_3">Response match 3</string>
    <string name="pengaturan_delay">Reply waiting time</string>
    <string name="pengaturan_delay_prolog">Fill in the reply wait time in seconds.</string>
    <string name="pengaturan_tindakan">Action</string>
    <string name="pengaturan_tindakan_prolog">Action when replies wait time out.</string>
    <string name="pengaturan_nomer_tujuan">No. Destination Message delivery</string>
    <string name="pengaturan_nomer_sn_sim">Serial Number of Sender\'s SIM Card </string>
    <string name="gantipassword_prolog">Please input the old password then fill in the new password and confirm.</string>
    <string name="gantipassword_katakunci_1">Old password</string>
    <string name="gantipassword_katakunci_2">New password</string>
    <string name="gantipassword_katakunci_3">Confirm Password</string>
    <string name="dana_payment_label">PEMBAYARAN</string>
    <string name="ganti">Ubah Password</string>
    <string name="contact_nama">Name</string>
    <string name="contact_nomer">Number</string>
    <string name="detail_harga">Rp. 12.000</string>
    <string name="listdata_alamat">Jalan Sukamaju Baru Komplek Damai Blok C7 Citeureup Bogor.</string>
    <string name="listdata_nohp">123456789</string>
    <string name="listdata_nama">Place Name</string>
    <string name="alamat_nama">Address Name</string>
    <string name="masukan_password">Enter Password</string>
    <string name="submit">Submit</string>
    <string name="nomer_telp">Mobile Number</string>
    <string name="pembeli">Buyer\'s Name</string>
    <string name="operator">Provider</string>
    <string name="nominal">Amount</string>
    <string name="server">Server</string>
    <string name="sms_center">SMS Center</string>
    <string name="jenis_transaski">Transaction Type</string>
    <string name="sim">Simcard</string>
    <string name="pin">Pin</string>
    <string name="kirim">Send</string>
    <string name="batal">Cancel</string>
    <string name="simpan">Save</string>
    <string name="reload">Reload</string>
    <string name="list_dialog_title">Title Dialog</string>
    <string name="user">User</string>
    <string name="group">Group</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="timeView">10:52</string>
    <string name="messageView">Hello How Are You? Hello How Are You? Hello How Are You? Hello How Are You? Hello How Are You?</string>
    <string name="grand_total">GRAND TOTAL:</string>
    <string name="subtotal">SUB TOTAL:</string>
    <string name="lunas">Paid</string>
    <string name="id_pelanggan">Id Customer</string>
    <string name="filter_inbox">Inbox Filter</string>
    <string name="katakunci_sukses">Keywords Transaction success</string>
    <string name="katakunci_gagal">Keywords Transaction failed</string>
    <string name="about">About:</string>
    <string name="subject">Subject:</string>
    <string name="message">Message Contents:</string>
    <string name="title">Title Detail</string>
    <string name="detail">This is text detail</string>
    <string name="berita_item_judul">News Title</string>
    <string name="berita_item_tanggal">Date Content</string>
    <string name="berita_item_konten">News Content</string>
    <string name="isi_about">This is about content.</string>
    <string name="office_hour">Office Hour:</string>
    <string name="isi_office_hour">This is content of office hour.</string>
    <string name="address">Address</string>
    <string name="add">My Address</string>
    <string name="isi_address">This is content of address.</string>
    <string name="contact">Contact:</string>
    <string name="isi_contat">This is Contact content.</string>
    <string name="phone">Phone:</string>
    <string name="isi_phone">This is phone content.</string>
    <string name="back"> </string>
    <string name="profile">My Profile</string>
    <string name="keluar">Exit</string>
    <string name="nama_klien">Client Name</string>
    <string name="email_klien">Client Name</string>
    <string name="location">Location</string>
    <string name="category">Category</string>
    <string name="cat">Cat:</string>
    <string name="periksa_koneksi">Please check your connection and try again</string>
    <string name="coba_lagi">Please try again</string>
    <string name="message_header_title">Message</string>
    <string name="daftar_kategori_produk_title">Product Category</string>
    <string name="daftar_produk_title">All Product</string>
    <string name="detail_produk_title">Detail Product</string>
    <string name="cart_title">Cart</string>
    <string name="checkout_title">Checkout</string>
    <string name="pembayaran_title">Payment Confirmation</string>
    <string name="my_wishlist_title">My Wishlist</string>
    <string name="message_title">Message</string>
    <string name="pesanan_title">Order History</string>
    <string name="gantipassword_title">Change Password</string>
    <string name="editprofile_title">Edit Profile</string>
    <string name="data_perusahaan_title">Company Data</string>
    <string name="data_produk_title">Product List</string>
    <string name="category_title">Category</string>
    <string name="lokasi_title">Group By Location</string>
    <string name="call_notif_title">Notification Call</string>
    <string name="search_title">Search</string>
    <string name="search_nama_toko_usaha">Shop / Business Name:</string>
    <string name="search_kategori">Category:</string>
    <string name="search_lokasi">Location:</string>
    <string name="search_btn_search">Search</string>
    <string name="no_result">No data!</string>
    <string name="edit_profil_title">Edit Profile</string>
    <string name="ganti_password_title">Change Password</string>
    <string name="old_password">Old Password:</string>
    <string name="new_password">New Password :</string>
    <string name="konfirmasi_password">Password Confirmation:</string>
    <string name="app_desc">His house is a variety of places and business directories in Indonesia</string>
    <string name="login_desc">Free Registration Fee, Press Sign Up</string>
    <string name="signup_nama">Name</string>
    <string name="signup_photo">Photo</string>
    <string name="signup_upload">Upload</string>
    <string name="login_email">E-mail ID</string>
    <string name="login_password">Password</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_">CHANGE PASSWORD</string>
    <string name="login_bantuan">Need a Help!</string>
    <string name="login_sign_in">LOGIN</string>
    <string name="login_side_bar">Login</string>
    <string name="register_side_bar">Register</string>
    <string name="login_forget_password">Forget Password</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="sign_in_fb">Sign in with Facebook</string>
    <string name="help_detail"> If you have: \ n- Questions \ n- Need help \ n- Forgotten password \ n- or other issues, \ n \ n Please contact us at: \nofficial.rumahdirektori@gmail.com</string>
    <string name="user_profil">User</string>
    <string name="sign_out">Sign Out</string>
    <string name="send_mail_to">Mail To:</string>
    <string name="send_mail_from">Mail From:</string>
    <string name="send_mail_subject">Subject:</string>
    <string name="send_mail_message">Message:</string>
    <string name="tanya_kami">Asking to us</string>
    <string name="produk_kami">Our Product</string>
    <string name="telepon_kami">Contact us</string>
    <string name="produk_dashboard_item_title">Title</string>
    <string name="produk_dashboard_item_subtitle">Sub Title</string>
    <string name="btn_left">Left</string>
    <string name="btn_right">Right</string>
    <string name="perusahaan_terbaru">NEW COMPANY</string>
    <string name="produk_terbaru">NEW PRODUCT</string>
    <string name="kategori_keterangan">Items Description</string>
    <string name="jumlah">(0)</string>
    <string name="edit_profil_upload">Upload</string>
    <string name="edit_profil_nama_lengkap">Full Name:</string>
    <string name="edit_profil_alamat">Address:</string>
    <string name="edit_profil_kode_pos">Postcode</string>
    <string name="edit_profil_propinsi">Province:</string>
    <string name="edit_profil_kota">City:</string>
    <string name="edit_profil_kecamatan">Sub Districts</string>
    <string name="edit_profil_tanggal_lahir">DOB</string>
    <string name="edit_profil_no_telp">Telephone Number</string>
    <string name="edit_profil_no_handphone">Phone Number</string>
    <string name="lebih_besar">></string>
    <string name="load_more_produk">Related Products</string>
    <string name="reset_password">Reset Password</string>
    <string name="app_lupa_password_desc">Please enter a registered email to reset password.</string>
    <string name="tanggal">Date</string>
    <string name="konten">Content Message</string>
    <string name="dari">From</string>
    <string name="balas">Reply</string>
    <string name="no_found">No results found!</string>
    <string name="notifikasi_item_judul">Notification Title</string>
    <string name="notifikasi_item_tanggal">TNotification Date</string>
    <string name="notifikasi_item_konten">Notification Content</string>
    <string name="message_item_tanggal">Message Date</string>
    <string name="default_">DEFAULT</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="ring_vibrate">Ringing and Vibrate</string>
    <string name="ring">Ringing </string>
    <string name="vibrate">Vibrate </string>
</resources>