<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_shadow"
    card_view:cardBackgroundColor="@android:color/white"
    card_view:cardElevation="@dimen/card_shadow"
    card_view:cardUseCompatPadding="false">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtNamaAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/alamat_nama"
                android:textColor="#000000"
                android:textSize="@dimen/text" />

            <TextView
                android:id="@+id/txtDetailAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtNamaAlamat"
                android:layout_alignRight="@+id/txtNamaAlamat"
                android:layout_below="@+id/txtNamaAlamat"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/listdata_alamat"
                android:textColor="@color/Tex" />

            <TextView
                android:id="@+id/txtDetailProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtNamaAlamat"
                android:layout_alignRight="@+id/txtNamaAlamat"
                android:layout_below="@+id/txtDetailAlamat"
                android:ellipsize="end"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/listdata_alamat"
                android:textColor="@color/Tex" />

            <TextView
                android:id="@+id/txtNohp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtNamaAlamat"
                android:layout_alignRight="@+id/txtNamaAlamat"
                android:layout_below="@+id/txtDetailProvince"
                android:ellipsize="end"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="1dp"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/listdata_nohp"
                android:textColor="@color/Tex" />

            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/txtNohp"
                android:background="#e4e5ea" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/separator"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox_as_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/checkBoxStyle" />

                <TextView
                    android:id="@+id/utamakan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:text="@string/default_"
                    android:textColor="@color/divider"
                    android:textSize="@dimen/text" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:paddingRight="15dp"
                    android:text="@string/edit"
                    android:textColor="@color/divider"
                    android:textSize="@dimen/text" />

                <TextView
                    android:id="@+id/hapus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="5dp"
                    android:text="@string/delete"
                    android:textColor="@color/divider"
                    android:textSize="@dimen/text" />
            </LinearLayout>


        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>