<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearSuaraGetar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/text"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioSuaraGetar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:clickable="false"
            android:longClickable="false"
            android:focusableInTouchMode="false"
            android:focusable="false"
             />

        <TextView
            android:id="@+id/txtSuaraGetar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:text="@string/ring_vibrate"
            android:textColor="@color/category_textcolour"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearSuara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearSuaraGetar"
        android:background="@drawable/text"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioSuara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:clickable="false"
            android:longClickable="false"
            android:focusableInTouchMode="false"
            android:focusable="false" />

        <TextView
            android:id="@+id/txtSuara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:text="@string/ring"
            android:textColor="@color/category_textcolour"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearGetar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearSuara"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioGetar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:clickable="false"
            android:longClickable="false"
            android:focusableInTouchMode="false"
            android:focusable="false"/>

        <TextView
            android:id="@+id/txtGetar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:text="@string/vibrate"
            android:textColor="@color/category_textcolour"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>